--- a/client/styles.css
+++ b/client/styles.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "./fontawesome/scss/fontawesome.scss";
+@import "./fontawesome/scss/solid.scss";
+@import "./fontawesome/scss/brands.scss";
+
 .bg-custom {
   background: rgb(71, 166, 80);
   background: radial-gradient(
@@ -18,7 +22,7 @@
 }
 
 .logo {
-  width: 50%;
-  height: 96%;
+  width: 80%;
+  height: 70%;
   border-radius: 50%;
 }
